making layout changes to improve UI/UX

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="My name is Hernán Mercado, I'm a Fullstack Developer. I'm expecialized in frontend development and also I work as a fullstack development"
+    />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hernán Mercado | Frontend Developer</title>
+    <title>Hernán Mercado | Fullstack Developer</title>
   </head>
   <body>
     <div id="root"></div>
