--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="description"
       content="My name is Hernán Mercado, I'm a Fullstack Developer. I'm expecialized in frontend development and also I work as a fullstack development"
     />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" href="./src/assets/iconpage.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hernán Mercado | Fullstack Developer</title>
   </head>
