--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Hernán Mercado | Fullstack Developer</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div itemscope itemtype="https://schema.org/Person" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
