adding estructured data for SEO

--- a/index.html
+++ b/index.html
@@ -9,9 +9,25 @@
     <link rel="icon" href="./src/assets/iconpage.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hernán Mercado | Fullstack Developer</title>
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "item": {
+              "@id": "https://hernanmercado.com/",
+              "name": "Fullstack Web Developer"
+            }
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
-    <div itemscope itemtype="https://schema.org/Person" id="root"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
