adding Facebook SEO

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     />
     <link rel="icon" href="./src/assets/iconpage.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hernán Mercado | Fullstack Developer</title>
+    <!-- SEO Facebook -->
+    <meta property="og:url" content="https://www.hernanmercado.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Hernán Mercado | Fullstack Developer" />
+    <meta
+      property="og:description"
+      content="Hernán Mercado's professional portfolio with all the software projects and relevant information about his tech profile"
+    />
+    <meta property="og:image" content="./src/assets/heading.jpg" />
+    <!-- end SEO Facebook -->
+    <title>Hernán Mercado | Fulltack Developer</title>
+    <!-- SEO Google  -->
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
@@ -19,12 +30,13 @@
             "position": 1,
             "item": {
               "@id": "https://hernanmercado.com/",
-              "name": "Fullstack Web Developer"
+              "name": "Hernán Mercado - Fullstack Web Developer"
             }
           }
         ]
       }
     </script>
+    <!-- end SEO Google  -->
   </head>
   <body>
     <div id="root"></div>
