changing og image source

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       property="og:description"
       content="Hernán Mercado's professional portfolio with all the software projects and relevant information about his tech profile"
     />
-    <meta property="og:image" content="./src/assets/heading.jpg" />
+    <meta
+      property="og:image"
+      content="https://scontent-bog1-1.xx.fbcdn.net/v/t1.6435-9/193840683_4531026576980443_8168728623100240710_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=e3f864&_nc_ohc=aBTb7kiXXhYAX9BWOiq&_nc_ht=scontent-bog1-1.xx&oh=00_AT-CMtCZwnZdC5DPlkRWhc31ukjXARurkVIvL-RJqibJ8Q&oe=625F3CBD"
+    />
     <!-- end SEO Facebook -->
     <title>Hernán Mercado | Fulltack Developer</title>
     <!-- SEO Google  -->
