adding SEO for twitter

--- a/index.html
+++ b/index.html
@@ -14,13 +14,28 @@
     <meta property="og:title" content="Hernán Mercado | Fullstack Developer" />
     <meta
       property="og:description"
-      content="Hernán Mercado's professional portfolio with all the software projects and relevant information about his tech profile"
+      content="Hernán Mercado's professional portfolio: All Projects and Skills."
     />
     <meta
       property="og:image"
-      content="https://scontent-bog1-1.xx.fbcdn.net/v/t1.6435-9/193840683_4531026576980443_8168728623100240710_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=e3f864&_nc_ohc=aBTb7kiXXhYAX9BWOiq&_nc_ht=scontent-bog1-1.xx&oh=00_AT-CMtCZwnZdC5DPlkRWhc31ukjXARurkVIvL-RJqibJ8Q&oe=625F3CBD"
+      content="https://res.cloudinary.com/dkregjlp3/image/upload/v1647898166/Portfolio%20images/bp6kpaltdqma36eyukze.jpg"
     />
     <!-- end SEO Facebook -->
+    <!-- SEO twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@hernan1ro" />
+    <meta name="twitter:creator" content="@hernan1ro" />
+    <meta property="og:url" content="https://www.hernanmercado.com" />
+    <meta property="og:title" content="Hernán Mercado | Fullstack Developer" />
+    <meta
+      property="og:description"
+      content="Hernán Mercado's professional portfolio: All Projects and Skills."
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dkregjlp3/image/upload/v1647898166/Portfolio%20images/bp6kpaltdqma36eyukze.jpg"
+    />
+    <!-- end SEO twitter -->
     <title>Hernán Mercado | Fulltack Developer</title>
     <!-- SEO Google  -->
     <script type="application/ld+json">
